# lincos_demo

./: .gitignore  CMakeLists.txt  README.md
applications/include/: a01.hpp  basic_ltc.hpp  basic_ltc_matdata.hpp  basic_phong.hpp  grahs_ltc.hpp  ltc_matdata.hpp
applications/source/: a01.cpp  basic_ltc.cpp  basic_phong.cpp  grahs_ltc.cpp
cmake/modules/: FindDependency.cmake  GenerateExecutables.cmake
framework/include/: application.hpp  area_light.hpp  helper.hpp  launcher.hpp  models.hpp  uniform_upload.hpp
framework/source/: application.cpp  area_light.cpp  helper.cpp  launcher.cpp  models.cpp  shader_loader.cpp  uniform_upload.cpp
resources/a01/shader/: .quad.fs.glsl.swp  quad.fs.glsl  splat.fs.glsl
resources/basic_ltc/shader/: arealight.vs.glsl  blit_ltc.fs.glsl  ltc.fs.glsl  ltc.vs.glsl  ltc2.fs.glsl  ltc_blit.fs.glsl  ltc_deferred.fs.glsl  ltc_deferred.vs.glsl  ltc_forward.fs.glsl  ltc_forward.vs.glsl  ltc_gbuffer.fs.glsl  ltc_gbuffer.vs.glsl  ltc_quad.fs.glsl
resources/basic_phong/shader/: phong.fs.glsl  phong.vs.glsl  pointlight.fs.glsl  pointlight.vs.glsl
resources/grahs_ltc/shader/: arealight.fs.glsl  ltc_blit.vs.glsl  ltc_forward.fs.glsl
